# flight-controller

./: .gitignore  README.adoc  README.md
docs/: experimenmts.adoc  motor-control.adoc
experiments/00_brushless_motor_control/: README.adoc  bldc.py
experiments/00_brushless_motor_control/motor-control/: Cargo.toml  README.adoc
experiments/00_brushless_motor_control/motor-control/src/: adc.rs  heap.rs  init.rs  main.rs  motor.rs  panic_etc.rs  uart_serial.rs
experiments/00_brushless_motor_control/motor-control/src/motor/: pwm.rs
experiments/00_brushless_motor_control/pwm/: Cargo.toml  memory.x
experiments/00_brushless_motor_control/pwm/examples/: crash.rs
experiments/00_brushless_motor_control/pwm/src/: main.rs
experiments/00_brushless_motor_control/schematics/: motor_drive.kicad_pro  motor_drive.kicad_sch
experiments/02_basic_embedded_rust/: README.adoc
experiments/02_basic_embedded_rust/basics/: Cargo.toml  README.adoc  itm.txt  openocd.cfg  openocd.gdb
experiments/02_basic_embedded_rust/basics/.cargo/: config.toml
experiments/02_basic_embedded_rust/basics/examples/: blinky-timer-irq.rs  button_led.rs  hello.rs  itm.rs
experiments/02_basic_embedded_rust/basics/src/: main.rs
experiments/02_basic_embedded_rust/rtic-app/: Cargo.toml  README.adoc
experiments/02_basic_embedded_rust/rtic-app/.cargo/: config.toml
experiments/02_basic_embedded_rust/rtic-app/src/: adc.rs  init.rs  lib.rs  main.rs  panic_etc.rs  uart_serial.rs
firmware/: Cargo.toml  README.adoc  run.sh
firmware/blinky/: Cargo.toml
firmware/blinky/.cargo/: config.toml
firmware/blinky/src/: main.rs
firmware/src/: main.rs
reference/: README.adoc
