[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
panic-halt = "0.2.0"

[dependencies.stm32f7xx-hal]
version = "0.8.0"
features = ["stm32f746"]

[dependencies.stm32f7]
version = "0.15.1"
features = ["stm32f7x6", "rt"]

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]